--- a/pagination.html
+++ b/pagination.html
@@ -4,9 +4,43 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>CSS 3 Pagination Design</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="pagination.css">
 </head>
 <body>
-	
+	<div class="demo">
+		<nav class="pagination-outer">
+			<ul class="pagination">
+				<li class="page-item">
+					<a href="" class="page-link" aria-label="previous">
+						<span aria-hidden="true"></span>
+					</a>
+				</li>
+
+				<li class="page-item">
+					<a href="" class="page-link">1</a>
+				</li>
+				<li class="page-item">
+					<a href="" class="page-link">2</a>
+				</li>
+				<li class="page-item active">
+					<a href="" class="page-link ">3</a>
+				</li>
+				<li class="page-item">
+					<a href="" class="page-link">4</a>
+				</li>
+				<li class="page-item">
+					<a href="" class="page-link">5</a>
+				</li>
+
+				<li class="page-item">
+					<a href="" class="page-link" aria-label="next">
+						<span aria-hidden="true"></span>
+					</a>
+				</li>
+
+			</ul>
+		</nav>
+	</div>
 </body>
 </html>
