Added document Title

--- a/pagination.html
+++ b/pagination.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="pagination.css">
 </head>
 <body>
+	<h1>CSS 3 Pagination</h1>
+	<p>this text come from newbranch</p>
 	<div class="demo">
 		<nav class="pagination-outer">
 			<ul class="pagination">
